--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -1,28 +1,23 @@
 {% extends 'main.html' %}
 
+
 {% block content %}
 
 <style>
-    .home-container{
+    .profile-container{
         display: grid;
         grid-template-columns: 1fr 3fr 1fr;
     }
 </style>
 
+<h1>{{user.username}}</h1>
 
-{% comment %} <h1>Home Template</h1> {% endcomment %}
-
-<div class="home-container">
-
+<div class="profile-container">
     <div>
         {% include 'base/topics_component.html' %}
     </div>
 
     <div>
-        <h5>{{room_count}} Rooms Available</h5>
-
-        <a href="{% url 'create-room' %}">Create Room</a>
-
         {% include 'base/feed_component.html' %}
     </div>
 
